# periodfind

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.py
periodfind/: __init__.py  aov.cpp  aov.pyx  ce.cpp  ce.pyx  ls.cpp  ls.pyx  test.cpp  test.pyx
periodfind/cuda/: aov.cu  aov.h  ce.cu  ce.h  ls.cu  ls.h
